# TP_2022_project_tic-tac-toe

./: Architecture.md  README.md  architecture.md  run.sh  uml_linc.txt
game/: Judge.cpp
model/: BasicAIPlayer.cpp  BasicHumanPlayer.cpp  IField.cpp  RectangleField.cpp  basics.cpp  model.hpp
model/basics/: Figure.cpp  classic_figures.hpp
model/fields/: IField.cpp  IField.hpp  RectangleField.hpp
model/players/: BasicAIPlayer.hpp  BasicHumanPlayer.hpp  players.hpp
src/: CMakeLists.txt  main.cpp
src/game/: CMakeLists.txt  Judge.cpp  Judge.hpp  console_drawer.cpp  console_drawer.hpp  game.cpp  game.hpp  judge.cpp  judge.hpp  out_function.cpp
src/interface/: CMakeLists.txt  game.cpp  game.hpp  igraphics.cpp  igraphics.hpp  ilauncher.hpp  imove_input.cpp  imove_input.hpp
src/interface/console/: CMakeLists.txt  console_functions.cpp  console_functions.hpp  console_graphics.cpp  console_graphics.hpp  console_inputer.cpp  console_launcher.cpp  console_launcher.hpp  console_move_input.cpp  console_move_input.hpp
src/interface/graphics/: CMakeLists.txt  console_graphics.cpp  console_graphics.hpp  igraphics.cpp  igraphics.hpp
src/interface/move_input/: CMakeLists.txt  console_move_input.cpp  console_move_input.hpp  imove_input.hpp
src/model/: CMakeLists.txt  model.hpp
src/model/basics/: Basics.hpp  Board.cpp  CMakeLists.txt  basics.hpp  classic_figures.hpp  figure.cpp  figure.hpp  iboard.hpp  map_board.cpp  map_board.hpp  point.cpp  point.hpp  rectangle_board.cpp  rectangle_board.hpp
src/model/fields/: CMakeLists.txt  IField.cpp  IField.hpp  InfiniteField.cpp  InfiniteField.hpp  RectangleField.cpp  RectangleField.hpp  TODO  fields.hpp  ifield.cpp  ifield.hpp  infinite_field.cpp  infinite_field.hpp  rectangle_field.cpp  rectangle_field.hpp
src/model/players/: BasicAIPlayer.cpp  BasicHumanPlayer.cpp  CMakeLists.txt  FewMovesAIPlayer.cpp  FewMovesAIPlayer.hpp  HeuristicAIPlayer.cpp  HeuristicAIPlayer.hpp  IPlayer.hpp  RandomAIPlayer.cpp  RandomAIPlayer.hpp  basic_human_player.cpp  basic_human_player.hpp  human_player.cpp  human_player.hpp  iplayer.hpp  players.hpp  random_ai_player.cpp  random_ai_player.hpp
