# project(model)

# add_subdirectory(basics)
# add_subdirectory(fields)
# add_subdirectory(players)


# target_link_libraries(rectangle_field rectangle_board)
# target_link_libraries(ifield figure)

# target_link_libraries(fields INTERFACE basics)
# target_link_libraries(players INTERFACE fields basics)

# add_library(model INTERFACE)
# target_link_libraries(model INTERFACE basics fields players)
